
- config/initializers/_dmproadmap_ugent.rb

  overrides settings config/initializers/_dmproadmap.rb

  that _dmproadmap.rb is included in git,
  which makes it hard to configure it at the server

  also used to override default_url_options for action_mailer and controller

  as configured in config/application.rb

  Please set DMP_HOST and DMP_PROTOCOL in your environment

- config/initializers/devise_ugent.rb

  overrides settings from config/initializers/devise.rb

  adds fix for https://github.com/datacite/omniauth-orcid/issues/14

  adds fix for omniauth-shibboleth when attributes are passed by headers
    and they contain utf-8 characters

- config/routes/*.rb

  add extra routes

  in order to load to extra files,
  I had to edit config/application.rb!

- app/views/branded/plans/index.html.erb

  overrides app/views/plans/index.html.erb

  reason: * override text above plans (switch to other user account)
          * hide link "Create plan" if user is not allowed to create plans (guest users)

- app/views/branded/orgs/admin_edit.html.erb

  overrides app/views/orgs/admin_edit.html.erb

  reason: disable tab schools/departments

- app/views/branded/plans/_share_form.html.erb

  edit section where you can set the visibility
  of the plan. In the upstream version you can set:
  * privately visible (default)
  * organisationally visible
  * publicly visible

  we removed the radio button to set "publicy visible"

  anyway, one can only change these if 50% of all questions are answered

  adds extra sentence: "Collaborators with permissions "co-owner" and "editor" will be mentioned as "principal investigator" and "project administrator" respectively on the plan"

- app/views/branded/plans/_navigation.html.erb

  hide link to tab "contributors"

  always show phase title (original shows "Write plan" when there is only one phase).

    cf. https://github.com/DMPbelgium/roadmap/issues/63
    cf. https://github.com/DMPbelgium/roadmap/issues/20
